Overview of changes in the next unstable release of Glib
========================================================

* Add Glib::ParamSpec->override() and get_redirect_target().
* Add Glib::Param->get_default_value().
* Support the fundamental type Glib::GType.
* Correctly store and look up custom signal marshallers.
* Fix fetching default values for unichar properties of custom subclasses.
* Fix subclassing with {pspec, get, set}-style properties.

Overview of changes in Glib 1.230
=================================

* Don't copy boxed objects when passing from Perl to C.  This mainly affects
  Perl subclasses which have signal handlers that involve boxed objects and use
  signal_chain_from_overridden() to call parent signal handlers.  With this
  change, the parent's handlers will now operator on the same object that the
  Perl code sees, and changes consequently propagate properly.
* Correctly handle variables with "set" magic attached in the default
  SET_PROPERTY implementation for custom Perl subclasses.
* Add Glib::Param::GType support.
* Make Glib::Flags::bool() and as_arrayref() callable as methods.
* Allow undef for default_value in Glib::ParamSpec->string.
* Improve the documentation in a few places.
* Add gperl_hv_take_sv, a wrapper for hv_store, to our C API.
* Fix some build and test failures.

Overview of changes in Glib 1.223
=================================

* Fix a few test failures.

Overview of changes in Glib 1.222
=================================

* Properly handle slashes in copyright footers passed to Glib::MakeHelper.
* Fix a test failure on s390.

Overview of changes in Glib 1.221
=================================

* Fix a few build and test suite issues.

Overview of changes in Glib 1.220
=================================

 Since 1.20x (the previous stable series)
 ----------------------------------------
  * Add constants Glib::SOURCE_CONTINUE and SOURCE_REMOVE for use in
    source-type callbacks.
  * Add Glib::Child::watch_add.